[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "croniter"
version = "6.0.1.dev0"
license = "MIT"
description = "croniter provides iteration for datetime object with cron like format"
authors = [
  { name = "Matsumoto Taichi", email = "taichino@gmail.com" },
  { name = "kiorky", email = "kiorky@cryptelium.net" },
]
requires-python = ">=3.9"
keywords = [
  "datetime",
  "iterator",
  "cron",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "python_dateutil",
]
dynamic = ["readme"]

[project.optional-dependencies]
test = [
  "pytz>2021.1",
]

[project.urls]
"Homepage" = "https://github.com/pallets-eco/croniter"

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "CHANGELOG.rst"] }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["croniter.tests*"]

[tool.setuptools.exclude-package-data]
croniter = ["tests*"]

[tool.black]
line-length = 119
target-version = [
  'py39',
  'py310',
  # Because we're using an old version of black to support older python, there
  # is no explicit python version target past 3.10
]

[tool.pylint.format]
max-line-length = 119
